# bugit-v2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  snapcraft.yaml
.github/workflows/: basedpyright.yaml
snap/: snapcraft.yaml
snap/hooks/: install  remove
snap/local/scripts/: env_wrapper.sh
src/bugit_v2/: app.py  bugit-completer.sh  check_command_existence.py  dump_standard_info.py
src/bugit_v2/apps/: app.py  r.py  submit_local_archive.py  t.py
src/bugit_v2/bug_report_submitters/: bug_report_submitter.py  jira_submitter.py  launchpad_submitter.py  local_file_submitter.py  mock_jira.py  mock_lp.py
src/bugit_v2/checkbox_utils/: __init__.py  checkbox_exec.py  checkbox_session.py  get_cert_status.py  models.py  submission_extractor.py
src/bugit_v2/components/: compact_button.py  confirm_dialog.py  description_editor.py  file_picker.py  header.py  selection_with_preview.py
src/bugit_v2/dut_utils/: info_getters.py  log_collectors.py  oem-getlogs.py  snap_debug.sh
src/bugit_v2/models/: app_args.py  app_state.py  bug_report.py  dut_info.py  visual_customization.py
src/bugit_v2/screens/: bug_report_screen.py  job_selection_screen.py  recover_from_autosave_screen.py  reopen_bug_editor_screen.py  reopen_precheck_screen.py  session_selection_screen.py  styles.tcss  submission_progress_screen.py
src/bugit_v2/scripts/: dump_standard_info.py  list-sessions.py  list_sessions.py  save_dut_info.py  submit_local_archive.py
src/bugit_v2/utils/: __init__.py  async_subprocess.py  constants.py  validations.py
