[project]
name = "bugit-v2"
version = "0.1.0"
description = ""
authors = [{ name = "Zhongning Li", email = "zhongning.li@canonical.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "textual (>=5.0.1,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jira (>=3.10.5,<4.0.0)",
    "launchpadlib (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "bugit_v2", from = "src" }]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
textual-dev = "^1.7.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
basedpyright = "^1.31.1"
ruff = "^0.12.8"

[tool.black]
line-length = 79
include = '(\.pyi?|\.ipynb)$'

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

# [tool.ruff.lint]
# select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
# ignore = ["D401", "D103", "COM812", "D100", "D101", "TRY201"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
bugit-v2 = "bugit_v2.app:main"
