[project]
name = "bugit-v2"
version = "0.2.6"
description = "Cool new Bugit"
authors = [{ name = "Zhongning Li", email = "zhongning.li@canonical.com" }]
requires-python = ">=3.12,<4.0.0"
readme = "README.md"
dependencies = [
    "textual (>=5.0.1,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jira (>=3.10.5,<4.0.0)",
    "launchpadlib (>=2.1.0,<3.0.0)",
    "pydantic>=2.11.7,<3.0.0",
    "typer>=0.16.1",
]

[project.scripts]
bugit-v2 = "bugit_v2.app:cli_app"

[dependency-groups]
dev = [
    "isort>=7,<8",
    "textual-dev>=1.7.0,<2",
    "pre-commit>=4.2.0,<5",
    "black>=25.1.0,<26",
    "basedpyright>=1.31.1,<2",
    "async-timeout>=5.0.1",
    "ruff>=0.12.11",
]

[tool.hatch.build.targets.sdist]
include = ["src/bugit_v2"]

[tool.hatch.build.targets.wheel]
include = ["src/bugit_v2"]

[tool.hatch.build.targets.wheel.sources]
"src/bugit_v2" = "bugit_v2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
include = '(\.pyi?|\.ipynb)$'

[tool.isort]
profile = "black"
